remove breeding energy bees
muahahah

--- a/Client/overrides/config/forestry/apiculture.cfg
+++ b/Client/overrides/config/forestry/apiculture.cfg
@@ -38,6 +38,7 @@ beekeeping {
 species {
     # Add species to blacklist identified by their uid, one per line. [default: ]
     S:blacklist <
+        careerbees.energy
      >
 }
 
