update roots +deps and add loottweaker

--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -91,7 +91,7 @@
     },
     {
       "projectID": 277064,
-      "fileID": 3243257,
+      "fileID": 3483816,
       "required": true
     },
     {
@@ -521,7 +521,7 @@
     },
     {
       "projectID": 282940,
-      "fileID": 3324116,
+      "fileID": 3460961,
       "required": true
     },
     {
@@ -641,7 +641,7 @@
     },
     {
       "projectID": 246183,
-      "fileID": 3243267,
+      "fileID": 3905074,
       "required": true
     },
     {
@@ -1697,6 +1697,11 @@
     {
       "projectID": 433389,
       "fileID": 3876730,
+      "required": true
+    },
+    {
+      "projectID": 255257,
+      "fileID": 3507866,
       "required": true
     }
   ],
