--- a/Client/overrides/config/nuclearcraft.cfg
+++ b/Client/overrides/config/nuclearcraft.cfg
@@ -1004,7 +1004,7 @@ other {
     B:dungeon_loot=true
 
     # Will the Wasteland Biome generate in the Overworld?
-    B:wasteland_biome=true
+    B:wasteland_biome=false
 
     # The weight assigned to the generation of the Wasteland Biomes - higher numbers correspond to higher generation rates.
     I:wasteland_biome_weight=1
