add overloaded armor bar and toughnessbar

--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -1703,6 +1703,16 @@
       "projectID": 255257,
       "fileID": 3507866,
       "required": true
+    },
+    {
+      "projectID": 314002,
+      "fileID": 2719400,
+      "required": true
+    },
+    {
+      "projectID": 313816,
+      "fileID": 2851670,
+      "required": true
     }
   ],
   "overrides": "overrides"
