reenable sheep dropping wool on death
doesn't really mean a lot in MCE, and also just mildly annoying

--- a/Client/overrides/config/reskillable.cfg
+++ b/Client/overrides/config/reskillable.cfg
@@ -2,7 +2,7 @@ s# Configuration file
 
 general {
     # Set this to true to disable sheep dropping wool upon death
-    B:"Disable Sheep Dropping Wool on Death"=true
+    B:"Disable Sheep Dropping Wool on Death"=false
 
     # Set this to false to remove the level-up button if you don't want to use another means to leveling-up skills!
     B:"Enable Level-Up Button"=true
