--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -1698,6 +1698,21 @@
       "projectID": 433389,
       "fileID": 3876730,
       "required": true
+    },
+    {
+      "projectID": 255257,
+      "fileID": 3507866,
+      "required": true
+    },
+    {
+      "projectID": 314002,
+      "fileID": 2719400,
+      "required": true
+    },
+    {
+      "projectID": 313816,
+      "fileID": 2851670,
+      "required": true
     }
   ],
   "overrides": "overrides"
