bind morph mod keybinds to alt+f4 by default
dan's addon disables all that functionality anyway so its just to get them out of the way, and with a funny bind :)

--- a/Client/overrides/config/ichunutil_keybinds.cfg
+++ b/Client/overrides/config/ichunutil_keybinds.cfg
@@ -14,6 +14,39 @@
 keybinds {
     # Key bind to open the Hat Selection GUI?
     S:hats.guiKeyBind=78
+    
+    # Key Code to favourite/unfavourite morph on the selector and show the radial menu.
+    # Default: 41 (` [also known as ~])
+    S:morph.keyFavourite=62:ALT
+
+    # Key Code to close the selector
+    # Default: 1 (Esc)
+    S:morph.keySelectorCancel=62:ALT
+
+    # Key Code to go down on the selector
+    # Default: 27 (])
+    S:morph.keySelectorDown=62:ALT
+
+    # Key Code to go left on the selector
+    # Default: 26 ([)
+    S:morph.keySelectorLeft=62:ALT
+
+    # Key Code to remove morph on the selector.
+    # Delete also works by default
+    # Default: 14 (Backspace)
+    S:morph.keySelectorRemoveMorph=62:ALT
+
+    # Key Code to go right on the selector
+    # Default: 27 (])
+    S:morph.keySelectorRight=62:ALT
+
+    # Key Code to select morph on the selector
+    # Default: 28 (Enter/Return)
+    S:morph.keySelectorSelect=62:ALT
+
+    # Key Code to go up on the selector
+    # Default: 26 ([)
+    S:morph.keySelectorUp=62:ALT
 
     # Key to grab blocks/entities with the Portal Gun [default: 34]
     S:portalgun.keyGrab=34
