--- a/Client/overrides/config/brokenwings.cfg
+++ b/Client/overrides/config/brokenwings.cfg
@@ -49,6 +49,7 @@ countermeasures {
         # Items to automatically unequip when worn as armor.
         # See readme on GitHub for examples of how to add extra metadata or dimension conditions [default: ]
         S:items <
+            simplyjetpacks:itemjetpack
          >
     }
 
@@ -97,6 +98,7 @@ general {
         424
         7
         10
+        2000
      >
 
     # What mode should Broken Wings operate under?
