disable extrautils lassos
no blacklist is silli

--- a/Client/overrides/config/extrautils2.cfg
+++ b/Client/overrides/config/extrautils2.cfg
@@ -55,7 +55,7 @@ enabled {
     B:FireAxe=true
     B:FlatTransferNode=true
     B:GlassCutter=true
-    B:GoldenLasso=true
+    B:GoldenLasso=false
     B:Indexer=true
     B:IndexerRemote=true
     B:IneffableGlass=true
