some small 1.6 fixes
update blood magic sacrifice blacklist for new mods
change blazing juggernaut bounty in intro to netherhounds (ancientbeasts)
swap golden lasso quest to chicken wing ring (same mod)
make energy cell quest work properly (ignore nbt)

--- a/Client/overrides/config/bloodmagic/bloodmagic.cfg
+++ b/Client/overrides/config/bloodmagic/bloodmagic.cfg
@@ -125,30 +125,23 @@ values {
         ocelot;100
         pig;100
         rabbit;100
- 		ancientwarfarenpc:aw_npc_bard;0
-		ancientwarfarenpc:aw_npc_combat;0
-		ancientwarfarenpc:aw_npc_courier;0
-		ancientwarfarenpc:aw_npc_priest;0
-		ancientwarfarenpc:aw_npc_siege_engineer;0
-		ancientwarfarenpc:aw_npc_trader;0
-		ancientwarfarenpc:aw_npc_worker;0
-		ancientwarfarenpc:faction.archer;0
-		ancientwarfarenpc:faction.archer.elite;0
-		ancientwarfarenpc:faction.bard;0
-		ancientwarfarenpc:faction.cavalry;0
-		ancientwarfarenpc:faction.civilian.female;0
-		ancientwarfarenpc:faction.civilian.male;0
-		ancientwarfarenpc:faction.leader;0
-		ancientwarfarenpc:faction.leader.elite;0
-		ancientwarfarenpc:faction.mounted_archer;0
-		ancientwarfarenpc:faction.priest;0
-		ancientwarfarenpc:faction.siege_engineer;0
-		ancientwarfarenpc:faction.soldier;0
-		ancientwarfarenpc:faction.soldier.elite;0
-		ancientwarfarenpc:faction.spellcaster;0
-		ancientwarfarenpc:faction.trader;0
-		ancientwarfarestructure:aw_gate;0
-		ancientwarfarevehicle:vehicle;0
+		ancientbeasts:bonepile;0
+		ancientbeasts:boulderer;0
+		ancientbeasts:damcell;0
+		ancientbeasts:fake_vessel;0
+		ancientbeasts:frost_walker;0
+		ancientbeasts:frostash_fox;0
+		ancientbeasts:ghost;0
+		ancientbeasts:giant_zombie;0
+		ancientbeasts:lil_vessel;0
+		ancientbeasts:nekros;0
+		ancientbeasts:netherhound;0
+		ancientbeasts:owlstack;0
+		ancientbeasts:rifted_enderman;0
+		ancientbeasts:sandy;0
+		ancientbeasts:v_head;0
+		ancientbeasts:vessel;0
+		ancientbeasts:zealot;0
 		artifacts:mimic;0
 		atum:assassin;0
 		atum:barbarian;0
@@ -166,6 +159,49 @@ values {
 		atum:warlord;0
 		atum:wraith;0
 		battletowers:golem;0
+		cqrepoured:boar_mage;0
+		cqrepoured:boarman;0
+		cqrepoured:calamity_crystal;0
+		cqrepoured:calamity_spawner;0
+		cqrepoured:dummy;0
+		cqrepoured:dwarf;0
+		cqrepoured:ender_calamity;0
+		cqrepoured:ender_king;0
+		cqrepoured:enderman;0
+		cqrepoured:exterminator;0
+		cqrepoured:flying_skull;0
+		cqrepoured:giant_endermite;0
+		cqrepoured:giant_silverfish;0
+		cqrepoured:giant_silverfish1;0
+		cqrepoured:giant_silverfish2;0
+		cqrepoured:giant_spider;0
+		cqrepoured:giant_tortoise;0
+		cqrepoured:goblin;0
+		cqrepoured:golem;0
+		cqrepoured:gremlin;0
+		cqrepoured:human;0
+		cqrepoured:illager;0
+		cqrepoured:illusion_walker_king;0
+		cqrepoured:lich;0
+		cqrepoured:mandril;0
+		cqrepoured:minotaur;0
+		cqrepoured:mummy;0
+		cqrepoured:necromancer;0
+		cqrepoured:nether_dragon;0
+		cqrepoured:npc;0
+		cqrepoured:ogre;0
+		cqrepoured:orc;0
+		cqrepoured:pirate;0
+		cqrepoured:pirate_captain;0
+		cqrepoured:pirate_parrot;0
+		cqrepoured:skeleton;0
+		cqrepoured:slime_part;0
+		cqrepoured:spectre;0
+		cqrepoured:spider_egg;0
+		cqrepoured:triton;0
+		cqrepoured:walker;0
+		cqrepoured:walker_king;0
+		cqrepoured:zombie;0
 		dungeontactics:towerguardian;0
 		dungeonsmod:traveller;0
 		eerieentities:cursed_armor;0
@@ -246,6 +282,11 @@ values {
 		mod_lavacow:undertaker;0
 		mod_lavacow:vespa;0
 		mod_lavacow:vespacocoon;0
+		fossil:fossil.anubite;0
+		fossil:fossil.anu;0
+		fossil:fossil.toyball;0
+		fossil:fossil.toyscratchingpost;0
+		fossil:fossil.toytetheredlog;0
 		iceandfire:amphithere;0
 		iceandfire:cyclops;0
 		iceandfire:deathworm;0
