put "the" infront of some champion suffixes
the

--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -3,12 +3,12 @@
 general {
     # Additional name suffixes that will be added to the pool of names given to champions
     S:"Additional Champion Name Suffixes" <
-	Eternal
+	the Eternal
         Suffering
         Destroyer
-        Ethereal
+        the Ethereal
         Moon
-        World-Eater
+        the World-Eater
         Erebus
         Primordium
         Undying
@@ -19,9 +19,9 @@ general {
         Fear
         Lord
         Burning Legion
-	Draconic
-	Gregorious
-	Avaricious
+	the Draconic
+	the Gregorious
+	the Avaricious
      >
 
     # Additional names that will be added to the pool of names given to champions
