disable funny rat main menu
doesn't even get utilized, probably just a small ram sink if anything

--- a/Client/overrides/config/rats.cfg
+++ b/Client/overrides/config/rats.cfg
@@ -34,7 +34,7 @@ all {
     B:Cheesemaking=true
 
     # True if rats has a custom main menu [default: true]
-    B:"Custom Main Menu"=true
+    B:"Custom Main Menu"=false
 
     # Default radius for tamed rats conducting their searches for items, harvests, etc. [range: 1 ~ 2147483647, default: 16]
     I:"Default Rat Radius"=16
