disable I&F main menu
probably just a small ram sink if anything since it gets overridden anyway

--- a/Client/overrides/config/ice_and_fire.cfg
+++ b/Client/overrides/config/ice_and_fire.cfg
@@ -99,7 +99,7 @@ all {
     I:"Cockatrice chicken Search Length"=32
 
     # Whether to display the dragon on the main menu or not [default: true]
-    B:"Custom main menu"=true
+    B:"Custom main menu"=false
 
     # How many blocks away can cyclopes detect sheep. Note that increasing this could cause lag. [range: 1 ~ 10000, default: 17]
     I:"Cyclopes Sheep Search Length"=17
