disable lead and flying saddle pets
very abusable to neutralize mobs entirely :v

--- a/Client/overrides/config/inventorypets/inventorypets.cfg
+++ b/Client/overrides/config/inventorypets/inventorypets.cfg
@@ -25,7 +25,7 @@
     B:"Disable Enchanting Table"=false
     B:"Disable Ender Chest"=false
     B:"Disable Enderman"=false
-    B:"Disable Flying Saddle"=false
+    B:"Disable Flying Saddle"=true
     B:"Disable Furnace"=false
     B:"Disable Ghast"=false
     B:"Disable Grave"=true
@@ -37,7 +37,7 @@
     B:"Disable Juggernaut"=true
     B:"Disable Jukebox"=false
     B:"Disable Kwanzaa"=false
-    B:"Disable Lead"=false
+    B:"Disable Lead"=true
     B:"Disable Loot"=true
     B:"Disable Magma Cube"=false
     B:"Disable Meta"=false
