disable slime pet

--- a/Client/overrides/config/inventorypets/inventorypets.cfg
+++ b/Client/overrides/config/inventorypets/inventorypets.cfg
@@ -60,7 +60,7 @@
     B:"Disable Shield"=false
     B:"Disable Siamese"=false
     B:"Disable Silverfish"=false
-    B:"Disable Slime"=false
+    B:"Disable Slime"=true
     B:"Disable Snow Golem"=false
     B:"Disable Spider"=false
     B:"Disable Sponge"=false
