disable extension from ancient spellcraft
it's bugged atm, ♾️ duration potion effects

--- a/Client/overrides/config/ebwizardry/ebwizardry.cfg
+++ b/Client/overrides/config/ebwizardry/ebwizardry.cfg
@@ -1243,7 +1243,7 @@ spells {
     B:"ancientspellcraft:experiment"=true
 
     # Set to false to disable this spell
-    B:"ancientspellcraft:extension"=true
+    B:"ancientspellcraft:extension"=false
 
     # Set to false to disable this spell
     B:"ancientspellcraft:extinguish"=true
