blacklist invpets summons from championship

--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -111,6 +111,10 @@ general {
     # Set which mobs are blacklisted or whitelisted for champion mobs, leave blank to disable this option
     S:"Mob List" <
     	botania:doppleganger
+	inventorypets:entitylivinganvil
+	inventorypets:entitylivingbed
+	inventorypets:entityminiquantumblaze
+	inventorypets:entityminiquantumenderman
      >
 
     # Set whether the mob configuration is blacklisted or whitelisted
