disable ghostly form potions
it's not quite like corrupted chorus, you're still in survival mode and it kinda glitchy

--- a/Client/overrides/config/ancientbeasts.cfg
+++ b/Client/overrides/config/ancientbeasts.cfg
@@ -2,7 +2,7 @@
 
 general {
     # Disable or enable ghostly form potions
-    B:"Are Ghostly Form Potions Enabled"=true
+    B:"Are Ghostly Form Potions Enabled"=false
 
     # Armor cooldown ticks on ability used
     I:"Armor Cooldown Ability"=400
