update tombstone potion blacklist with new things in 1.6
also paste to harmful blacklist just incase

--- a/Client/overrides/config/tombstone.cfg
+++ b/Client/overrides/config/tombstone.cfg
@@ -545,6 +545,7 @@ general {
         tombstone:preservation
         tombstone:exorcism
         extraalchemy
+        ancientbeasts
         astralsorcery
         ancientspellcraft
         botania
@@ -555,6 +556,8 @@ general {
         cyclicmagic
         champions
         charm
+        cqrepoured
+        conarm:superhotpotion
         dungeontactics:cryo_effect
         ebwizardry
         extrautils2
@@ -563,6 +566,7 @@ general {
         immersiveintelligence
         midnight
         mowziesmobs
+        morphspellpack
         potioncore
         randomthings
         rats
@@ -574,12 +578,50 @@ general {
         twilightforest:frosted
         tconstruct
         totemic
+        tfspellpack
         vampirism
+        necromancersdelight
      >
 
     # Harmful effects that can't used by certain features such as tablet of cupidity and the enchantment plague bringer
     S:unhandledHarmfulEffects <
         minecraft:nausea
+        ancientbeasts
+        astralsorcery
+        ancientspellcraft
+        botania
+        bloodmagic
+        bewitchment
+        biomesoplenty:curse
+        bountifulbaubles:sinful
+        cyclicmagic
+        champions
+        charm
+        cqrepoured
+        conarm:superhotpotion
+        dungeontactics:cryo_effect
+        ebwizardry
+        extrautils2
+        mod_lavacow
+        immersiveengineering
+        immersiveintelligence
+        midnight
+        mowziesmobs
+        morphspellpack
+        potioncore
+        randomthings
+        rats
+        roots
+        xreliquary
+        thaumcraft
+        thaumadditions
+        thebetweenlands
+        twilightforest:frosted
+        tconstruct
+        totemic
+        tfspellpack
+        vampirism
+        necromancersdelight
      >
     S:whiteListBlocks <
         minecraft:tallgrass:0
