disable cyclic autosmelt
kinda very buggy :v

--- a/Client/overrides/config/cyclicmagic.cfg
+++ b/Client/overrides/config/cyclicmagic.cfg
@@ -725,7 +725,7 @@ cyclicmagic {
         B:EmptyBeacon=true
 
         #  Set false to delete - requires restart [default: true]
-        B:EnchantAutoSmelt=true
+        B:EnchantAutoSmelt=false
 
         #  Set false to delete - requires restart [default: true]
         B:EnchantBeheading=true
