disable charm magnetic
funni dupe, fixes #451

--- a/Client/overrides/config/charm.cfg
+++ b/Client/overrides/config/charm.cfg
@@ -404,7 +404,7 @@ CharmEnchanting {
     B:Homing=true
 
     # Tools with the Magnetic enchantment automatically pick up drops.
-    B:Magnetic=true
+    B:Magnetic=false
 
     # An item with the Salvage enchantment does not disappear when its durability is depleted, giving you a chance to get it repaired.
     # If the item runs out of durability the player will drop it and must be picked up again.  Watch out for lava.
