blacklist some bad things from block grabby tools
definitely missing a lot of bad things, but these are the ones that came to mind when looking through jei

--- a/Client/overrides/config/bloodmagic/bloodmagic.cfg
+++ b/Client/overrides/config/bloodmagic/bloodmagic.cfg
@@ -13,6 +13,86 @@ blacklist {
     S:teleposer <
         bedrock
         mob_spawner
+        extracells:fluidcrafter
+        extracells:ecbaseblock
+        extracells:fluidfiller
+        refinedstorage:disk_drive
+        parabox:parabox
+        immersivengineering:metal_device1
+        astralsorcery:blockcollectorcrystal
+        yabba:item_barrel
+		ebwizardry:imbuement_altar
+		opencomputers:case1
+		opencomputers:case2
+		opencomputers:case3
+		opencomputers:adapter
+		opencomputers:assembler
+		opencomputers:capacitor
+		opencomputers:charger
+		opencomputers:disassembler
+		opencomputers:geolyzer
+		opencomputers:hologram1
+		opencomputers:hologram2
+		opencomputers:keyboard
+		opencomputers:motionsensor
+		opencomputers:powerconverter
+		opencomputers:powerdistributor
+		opencomputers:printer
+		opencomputers:raid
+		opencomputers:screen1
+		opencomputers:screen2
+		opencomputers:screen3
+		opencomputers:relay
+		opencomputers:redstone
+		opencomputers:rack
+		opencomputers:waypoints
+		opencomputers:casecreative
+		opencomputers:netsplitter
+		opencomputers:transposer
+		opencomputers:carpetedcapacitor
+		opencomputers:print
+		opencomputers:robot
+		iceandfire:dread_spawner
+		erebus:spider_spawner
+		erebus:jumping_spider_spawner
+		erebus:tarantula_spawner
+		erebus:wasp_spawner
+		erebus:antlion_spawner
+		erebus:dragon_fly_spawner
+		erebus:zombie_ant_spawner
+		erebus:zombie_ant_soldier_spawner
+		erebus:magma_crawler_spawner
+		erebus:locust_spawner
+		erebus:dung_spawner_bot_fly
+		erebus:dung_spawner_fly
+		ancientspellcraft:master_bolt
+		thaumcraft:golem_builder
+		thaumcraft:infernal_furnace
+		thaumicaugmentation:eldritch_lock
+		thaumicaugmentation:impetus_matrix
+		thaumicaugmentation:capstone
+		thaumicaugmentation:crab_vent
+		thaumicaugmentation:arcane_trapdoor_wood
+		thaumicaugmentation:arcane_trapdoor_metal
+		thaumicaugmentation:arcane_trapdoor_silverwood
+		thaumicaugmentation:warded_button_greatwood
+		thaumicaugmentation:warded_button_silverwood
+		thaumicaugmentation:warded_button_arcane_stone
+		thaumicaugmentation:warded_pressure_plate_greatwood
+		thaumicaugmentation:warded_pressure_plate_silverwood
+		thaumicaugmentation:warded_pressure_plate_arcane_stone
+		thaumicaugmentation:arcane_door
+		thebetweenlands:dungeon_door_runes
+		thebetweenlands:dungeon_door_runes_mimic
+		thebetweenlands:dungeon_door_runes_crawler
+		thebetweenlands:dungeon_door_combination
+		yabba:antibarrel
+		bountiful:bountyboard
+		chancecubes:giant_chance_cube
+		tombstone:grave_simple
+		tombstone:grave_normal
+		tombstone:grave_cross
+		tombstone:tombstone
      >
 
     # Stops listed blocks from being transposed.
@@ -20,6 +100,86 @@ blacklist {
     S:transposer <
         bedrock
         mob_spawner
+        extracells:fluidcrafter
+        extracells:ecbaseblock
+        extracells:fluidfiller
+        refinedstorage:disk_drive
+        parabox:parabox
+        immersivengineering:metal_device1
+        astralsorcery:blockcollectorcrystal
+        yabba:item_barrel
+		ebwizardry:imbuement_altar
+		opencomputers:case1
+		opencomputers:case2
+		opencomputers:case3
+		opencomputers:adapter
+		opencomputers:assembler
+		opencomputers:capacitor
+		opencomputers:charger
+		opencomputers:disassembler
+		opencomputers:geolyzer
+		opencomputers:hologram1
+		opencomputers:hologram2
+		opencomputers:keyboard
+		opencomputers:motionsensor
+		opencomputers:powerconverter
+		opencomputers:powerdistributor
+		opencomputers:printer
+		opencomputers:raid
+		opencomputers:screen1
+		opencomputers:screen2
+		opencomputers:screen3
+		opencomputers:relay
+		opencomputers:redstone
+		opencomputers:rack
+		opencomputers:waypoints
+		opencomputers:casecreative
+		opencomputers:netsplitter
+		opencomputers:transposer
+		opencomputers:carpetedcapacitor
+		opencomputers:print
+		opencomputers:robot
+		iceandfire:dread_spawner
+		erebus:spider_spawner
+		erebus:jumping_spider_spawner
+		erebus:tarantula_spawner
+		erebus:wasp_spawner
+		erebus:antlion_spawner
+		erebus:dragon_fly_spawner
+		erebus:zombie_ant_spawner
+		erebus:zombie_ant_soldier_spawner
+		erebus:magma_crawler_spawner
+		erebus:locust_spawner
+		erebus:dung_spawner_bot_fly
+		erebus:dung_spawner_fly
+		ancientspellcraft:master_bolt
+		thaumcraft:golem_builder
+		thaumcraft:infernal_furnace
+		thaumicaugmentation:eldritch_lock
+		thaumicaugmentation:impetus_matrix
+		thaumicaugmentation:capstone
+		thaumicaugmentation:crab_vent
+		thaumicaugmentation:arcane_trapdoor_wood
+		thaumicaugmentation:arcane_trapdoor_metal
+		thaumicaugmentation:arcane_trapdoor_silverwood
+		thaumicaugmentation:warded_button_greatwood
+		thaumicaugmentation:warded_button_silverwood
+		thaumicaugmentation:warded_button_arcane_stone
+		thaumicaugmentation:warded_pressure_plate_greatwood
+		thaumicaugmentation:warded_pressure_plate_silverwood
+		thaumicaugmentation:warded_pressure_plate_arcane_stone
+		thaumicaugmentation:arcane_door
+		thebetweenlands:dungeon_door_runes
+		thebetweenlands:dungeon_door_runes_mimic
+		thebetweenlands:dungeon_door_runes_crawler
+		thebetweenlands:dungeon_door_combination
+		yabba:antibarrel
+		bountiful:bountyboard
+		chancecubes:giant_chance_cube
+		tombstone:grave_simple
+		tombstone:grave_normal
+		tombstone:grave_cross
+		tombstone:tombstone
      >
 
     # Stops the listed entities from being used in the Well of Suffering.
