--- a/Client/overrides/config/portalgun.cfg
+++ b/Client/overrides/config/portalgun.cfg
@@ -59,7 +59,7 @@ portalgun {
 
     # Base Weight that the Portal Gun is allowed to carry, in percentile (%)
     # Set this to 0 to disable grabbing of blocks and entities which are not part of this mod. [range: 0 ~ 2147483647, default: 100]
-    I:entityGrabWeightBase=100
+    I:entityGrabWeightBase=0
 
     # Maximum distance to fire portals from the Portal Gun. [range: 1 ~ 2147483647, default: 10000]
     I:maxShootDistance=10000
