disable pharos beacon
fuk this thing

--- a/Client/overrides/config/cyclicmagic.cfg
+++ b/Client/overrides/config/cyclicmagic.cfg
@@ -911,7 +911,7 @@ cyclicmagic {
         B:PlayerLauncher=true
 
         # beacon_potion Set false to delete - requires restart [default: true]
-        B:PotionBeacon=true
+        B:PotionBeacon=false
 
         #  Set false to delete - requires restart [default: true]
         B:PotionBlindness=true
