disable silverfish pet

--- a/Client/overrides/config/inventorypets/inventorypets.cfg
+++ b/Client/overrides/config/inventorypets/inventorypets.cfg
@@ -59,7 +59,7 @@
     B:"Disable Sheep"=false
     B:"Disable Shield"=false
     B:"Disable Siamese"=false
-    B:"Disable Silverfish"=false
+    B:"Disable Silverfish"=true
     B:"Disable Slime"=true
     B:"Disable Snow Golem"=false
     B:"Disable Spider"=false
