--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -12,7 +12,7 @@
   "manifestVersion": 1,
   "name": "MC Eternal",
   "version": "1.6.1",
-  "author": "",
+  "author": "adam98991",
   "files": [
     {
       "projectID": 323596,
