--- a/Client/overrides/config/itlt.cfg
+++ b/Client/overrides/config/itlt.cfg
@@ -25,7 +25,7 @@ display {
     B:useTechnicIcon=true
 
     # Change this value to change the name of the MineCraft window
-    S:windowDisplayTitle=Minecraft forge-14.23.5.2847
+    S:windowDisplayTitle=MC Eternal 1.6.1
 }
 
 
