add ancientbeasts book to akashictome
probably fine, i think, idk i didn't test

--- a/Client/overrides/config/akashictome.cfg
+++ b/Client/overrides/config/akashictome.cfg
@@ -27,6 +27,7 @@ general {
         evilcraft:origins_of_darkness
         draconicevolution:info_tablet
         charset:tablet
+        ancientbeasts:beastiary
      >
     S:"Whitelisted Names" <
         book
