blacklist tcon lumber axes and exu2 fireaxe from treechop
they already basically do that, it just leaves random floaty bits of chopped log

--- a/Client/overrides/config/treechop.cfg
+++ b/Client/overrides/config/treechop.cfg
@@ -89,7 +89,7 @@ compatibility {
 
             # Comma-separated list of items that should not chop when used to break a log
             # Ore dictionary names are also acceptable [default: mekanism:atomic_disassembler,]
-            S:choppingToolsBlacklist=mekanism:atomic_disassembler,botania:terra_axe
+            S:choppingToolsBlacklist=mekanism:atomic_disassembler,botania:terra_axe,tconstruct:lumberaxe,extrautils2:fireaxe
         }
 
         specific {
