disable curse of enfeeblement and empowering presence for real
i edit wrong config before oop

--- a/Client/overrides/config/ebwizardry/ebwizardry.cfg
+++ b/Client/overrides/config/ebwizardry/ebwizardry.cfg
@@ -1729,7 +1729,7 @@ spells {
     B:"ebwizardry:cure_effects"=true
 
     # Set to false to disable this spell
-    B:"ebwizardry:curse_of_enfeeblement"=true
+    B:"ebwizardry:curse_of_enfeeblement"=false
 
     # Set to false to disable this spell
     B:"ebwizardry:curse_of_soulbinding"=true
@@ -1771,7 +1771,7 @@ spells {
     B:"ebwizardry:earthquake"=true
 
     # Set to false to disable this spell
-    B:"ebwizardry:empowering_presence"=true
+    B:"ebwizardry:empowering_presence"=false
 
     # Set to false to disable this spell
     B:"ebwizardry:enrage"=true
