disable sack of holding
has a blacklist, but has some error in the code that makes it give no shites about the blacklist contents :V

--- a/Client/overrides/config/cyclicmagic.cfg
+++ b/Client/overrides/config/cyclicmagic.cfg
@@ -692,7 +692,7 @@ cyclicmagic {
         B:ChaosSiren=true
 
         #  Set false to delete - requires restart [default: true]
-        B:ChestSack=true
+        B:ChestSack=false
 
         #  Set false to delete - requires restart [default: true]
         B:ClimbingGlove=true
