--- a/Client/overrides/config/roots/general.cfg
+++ b/Client/overrides/config/roots/general.cfg
@@ -34,6 +34,7 @@ main {
     # List of mod:item:meta (meta optional) of saplings that should be blacklisted from the Spreading Forest ritual
     S:SaplingBlacklist <
         roots:wildwood_sapling
+        thebetweenlands:sapling_spirit_tree
      >
 
     # List of mod:item:meta (meta optional) of saplings that should be planted in 2x2 by the Spreading Forest ritual
