blacklist treasure2 charm book from akashic tome

--- a/Client/overrides/config/akashictome.cfg
+++ b/Client/overrides/config/akashictome.cfg
@@ -3,6 +3,7 @@
 general {
     B:"Allow all items to be added"=false
     S:"Blacklisted Mods" <
+        treasure2
      >
     S:"Mod Aliases" <
         nautralpledge=botania
