--- a/Client/overrides/config/DankNull.cfg
+++ b/Client/overrides/config/DankNull.cfg
@@ -25,7 +25,7 @@ general {
 
 "server rules" {
     # If true, you will be able to pipe items into the /dank/null Docking Station [default: true]
-    B:AllowDockInsertion=true
+    B:AllowDockInsertion=false
 
     # A semicolon separated list of items that are not allowed to be placed into the creative /dank/null
     # Format: modid:name:meta (meta optional: modid:name is acceptable) - Example: minecraft:diamond;minecraft:coal:1 [default: ]
