disallow centrifuging Osgloglas in PTIC Centrifuge
lets you get osmium pre-beneath because custom loot

--- a/Client/overrides/config/plustic.cfg
+++ b/Client/overrides/config/plustic.cfg
@@ -268,6 +268,7 @@ tweaks {
 
     # Enter in the format inputFluid:outputFluid1;outputFluid2;outputFluid3 [default: ]
     S:"Centrifuge blacklist" <
+        osgloglas:osmium;refinedglowstone;refinedobsidian
      >
 
     # Energy consumed by centrifuge per millibucket [range: 0 ~ 2147483647, default: 5]
