--- a/Client/overrides/config/forestry/apiculture.cfg
+++ b/Client/overrides/config/forestry/apiculture.cfg
@@ -39,6 +39,7 @@ species {
     # Add species to blacklist identified by their uid, one per line. [default: ]
     S:blacklist <
         careerbees.energy
+        magicbees.speciesOsmium
      >
 }
 
