disable iron golem
one full row of hearts, no cooldown
very balanced mod.

--- a/Client/overrides/config/inventorypets/inventorypets.cfg
+++ b/Client/overrides/config/inventorypets/inventorypets.cfg
@@ -33,7 +33,7 @@
     B:"Disable Heart"=false
     B:"Disable House"=false
     B:"Disable Illuminati"=false
-    B:"Disable Iron Golem"=false
+    B:"Disable Iron Golem"=true
     B:"Disable Juggernaut"=true
     B:"Disable Jukebox"=false
     B:"Disable Kwanzaa"=false
